# Cherry

./: .gitignore  .gitmodules  CMakeLists copy.txt  CMakeLists.txt  LICENSE.txt  README.md  SECURITY.md  TODO.md  cherry.hpp  options.hpp  uikit.h  uikit.hpp
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
Assets/: icons.h
Platform/GUI/editor/: ApplicationGUI.cpp  ApplicationGUI.h  Image.cpp  Image.h
Platform/Headless/Devtools/: ApplicationHeadless.cpp  ApplicationHeadless.h
Source/editor/: Application.h  EntryPoint.h
Source/editor/Serialization/: BufferStream.h  StreamReader.h  StreamWriter.h
assets/: icons.h
components/buttons/: buttons.cpp  buttons.h
components/menubar/: menubar.cpp  menubar.h
components/windows/: windows.cpp  windows.h
docs/all/: posts.json
example/: CMakeLists.txt  example.cpp  example.h
examples/: README.md  TODO.md
examples/advanced/: Blueprints.json  CMakeLists.txt  README.md  build.bat  cef_log.txt  main.cpp  qsd  savedatda.json
examples/advanced/assets/ressources/locales/: fr_2.json  new.json
examples/apps/calculator/: CMakeLists.txt  main.cpp
examples/apps/calculator/assets/resources/components/button/: button.hpp  button.lua
examples/apps/calculator/assets/resources/components/screen/: screen.hpp  screen.lua
examples/apps/calculator/assets/resources/scripts/: render.lua
examples/building/shared_hello/: CMakeLists.txt
examples/building/static_hello/: CMakeLists.txt
examples/concepts/assets_simple/: CMakeLists.txt  main.cpp
examples/concepts/audio/: CMakeLists.txt  main.cpp
examples/concepts/components_creator/: CMakeLists.txt  main.cpp
examples/concepts/components_creator_advanced/: main.cpp
examples/concepts/components_simple/: CMakeLists.txt  TODO  main.cpp
examples/concepts/compute_shaders/: CMakeLists.txt  main.cpp
examples/concepts/compute_shaders/assets/shaders/: shader.comp
examples/concepts/compute_shaders_noise/: main.cpp
examples/concepts/drawing/: CMakeLists.txt  main.cpp
examples/concepts/fonts/: CMakeLists.txt  main.cpp
examples/concepts/hooks/: CMakeLists.txt  main.cpp
examples/concepts/io/: main.cpp
examples/concepts/layers/: CMakeLists.txt  main.cpp
examples/concepts/lua_scripting/: CMakeLists.txt  main.cpp
examples/concepts/lua_scripting_advanced/: CMakeLists.txt  main.cpp
examples/concepts/markdown/: CMakeLists.txt  main.cpp
examples/concepts/multi_context/: CMakeLists.txt  main.cpp
examples/concepts/multiapp/: CMakeLists.txt  main.cpp
examples/concepts/native_dear_imgui/: main.cpp
examples/concepts/net_fetch/: CMakeLists.txt  main.cpp
examples/concepts/snap_to_edges/: build.sh  main.cpp
examples/concepts/theme_advanced/: CMakeLists.txt  main.cpp
examples/concepts/theme_simple/: CMakeLists.txt  main.cpp
examples/concepts/traduction/: CMakeLists.txt  main.cpp
examples/concepts/window_styles/: main.cpp
examples/demo/: Blueprints.json  CMakeLists.txt  build.bat  main.cpp  savedatda.json
examples/demo/assets/ressources/locales/: en.json  es.json
examples/hello/: CMakeLists.txt  main.cpp
examples/hello_world/: Blueprints.json  CMakeLists.txt  build.bat  main.cpp  new  savedatda.json
examples/hello_world/assets/resources/locales/: fr.json
examples/simple/: CMakeLists.txt  build.sh  imgui.ini  main.cpp  savedatda.json
examples/text_editor/: CMakeLists.txt  main.cpp
examples/text_editor/assets/ressources/locales/: en.json
examples/tiny/: CMakeLists.txt  build.sh  imgui.ini  main.cpp  savedatda.json
examples/tiny/assets/ressources/locales/: fr.json
kit/: README.md
kit/aio/bases/: README.md
kit/themes/dark/: dark.hpp
kit/themes/dark_colorfull/: dark_colorfull.hpp
kit/themes/dark_high_contrast/: dark_high_contrast.hpp
kit/themes/dark_vortex/: dark_vortex.hpp
kit/themes/light/: light.hpp
kit/themes/light_colorfull/: light_colorfull.hpp
kit/themes/light_high_contrast/: light_high_contrast.hpp
kit/themes/light_vortex/: light_vortex.hpp
kit/tools/debug/: debug.hpp
kit/utils/behavior/: README.md
lib/: .gitignore
main/core/: application.hpp  entry_point.hpp  layer.hpp  timer.hpp
main/core/assert/: assert.hpp
main/core/color/: color.hpp
main/core/core/: assert.hpp  color.hpp  log.hpp
main/core/logs/: log.hpp  log_custom_formatters.hpp
main/core/random/: random.hpp
main/core/serialization/: stream_reader.cpp  stream_writer.hpp
main/core/types/: type_safety.hpp
main/core/utils/: buffer.hpp  types.hpp
main/engine/: base.hpp  options.hpp
main/engine/app/: app.cpp  app.hpp  app_helpers.hpp  app_rendering.cpp  app_sound.cpp
main/engine/app_window/: app_window.cpp  app_window.hpp
main/engine/audio/: audio.cpp  audio.hpp
main/engine/components/: components.cpp  components.hpp  factory.hpp
main/engine/debug/: debug.cpp  debug.hpp
main/engine/drawing/: drawing.cpp  drawing.hpp
main/engine/hooks/: hooks.cpp  hooks.hpp  hooks_api.cpp  hooks_helpers.hpp
main/engine/identifier/: identifier.cpp  identifier.hpp
main/engine/image/: image.cpp  image.hpp
main/headless/: app_headless.cpp  app_headless.hpp
platform/engine/: app.cpp  app.hpp  app_window.cpp  app_window.hpp  base.hpp  cef.cpp  cef.hpp  components.cpp  components.hpp  identifier.cpp  identifier.hpp  image.cpp  image.hpp  options.hpp  themes.cpp  themes.hpp  window.cpp  window.hpp
platform/headless/: app_headless.cpp  app_headless.hpp
src/: Application.h  EntryPoint.h  Layer.h  Random.cpp  Random.h  application.hpp  entry_point.hpp  layer.hpp  random.cpp  random.hpp  timer.hpp
src/core/: Assert.h  Buffer.h  Log.cpp  Log.h  LogCustomFormatters.h  assert.hpp  buffer.hpp  color.hpp  log.cpp  log.hpp
src/serialization/: BufferStream.cpp  BufferStream.h  FileStream.cpp  FileStream.h  StreamReader.cpp  StreamReader.h  StreamWriter.cpp  StreamWriter.h  buffer_stream.cpp  buffer_stream.hpp  file_stream.cpp  file_stream.hpp  stream_reader.cpp  stream_reader.hpp  stream_writer.cpp  stream_writer.hpp
src/utils/: StringUtils.cpp  string_utils.cpp  string_utils.hpp  types.hpp
(+504 files in other folders)
